[metadata]
name = secret-token
version = 1.0.2
url = https://github.com/Lexicality/secret-token
description = Easy manipulation of RFC8959 secret-token URIs
long_description = file: README.md
long_description_content_type = text/markdown
author = Lex Robinson
author_email = lexi@lexi.org.uk
license = Apache-2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
    Topic :: Utilities
keywords = rfc8959

[options]
py_modules = secret_token
python_requires = ~=3.6


[flake8]
max-line-length = 88
extend-ignore = E203
